--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -84,3 +84,23 @@
         
     }
 }
+
+#error-toast {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: lightcoral;
+    color: black;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 9999999;
+    left: 43%;
+  }
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  #error-toast.show {
+    visibility: visible; /* Show the snackbar */
+  }
+ 
