--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -112,4 +112,17 @@
           }
       }
   }
+
+  .overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255, 0.5);
+    z-index: 1051;
+    .spinner-border {
+        position: relative;
+        top: 50%;
+        left: 50%;
+    }
+  }
  
