--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -85,18 +85,31 @@
     }
 }
 
+.validation-error{
+    font-size: 12px;
+    color: lightcoral;
+    text-align: center;
+}
+
 #error-toast {
     visibility: hidden;
-    min-width: 250px;
-    margin-left: -125px;
     background-color: lightcoral;
     color: black;
     text-align: center;
     border-radius: 2px;
     padding: 16px;
-    position: fixed;
+    position: absolute;
     z-index: 9999999;
-    left: 43%;
+    top:4%;
+    left:50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .md-form{
+      margin-bottom: 0px !important;
+  }
+  .form-control{
+    margin-bottom: 10px !important;
   }
   
   /* Show the snackbar when clicking on a button (class added with JavaScript) */
