--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -173,4 +173,9 @@
       font-size: 16px;
       color:#45526e   
   }
- 
+  @media only screen and (max-width: 320px) {
+    .homepage-title{
+        margin-top: 35px !important;
+        max-width: none !important;
+    }
+}
