--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -53,8 +53,11 @@
 }
 
 #events{
-    background-image: url('../images/DM0NaOX-abstract-hd-wallpapers-1080p.jpg');
-    background-attachment: fixed;
+    
+    background-image: url('../images/3.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     .homepage-title{
         margin-top: 50px;
     }
@@ -69,21 +72,37 @@
     }
 }
 
+#services{
+    background-image: url('../images/4.png');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 #about{
     h1{
         font-family: 'Abril Fatface', cursive;
         color: #2e2e2e;
     }
-    background-image: url('../images/cool-background.png');
+    background-image: url('../images/1.jpeg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-top: 10%;
     .jumbotron {
-        background-color: rgba(255,255,255,0.2);
+        background-color: rgba(255,255,255,0.5);
     }
 }
 
 #team{
+    background-image: url('../images/2.jpeg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     .card {
-        background-color: rgba(255,255,255,0.2);
+        background-color: rgba(255,255,255,0.5);
     }
 }
 
@@ -132,9 +151,35 @@
 #participant{
     .container{
         max-width: 100%;
+        height: 60vh;
+        .table-responsive{
+            height: 50vh;
+        }
         td, th {
             text-align: center;
         }
+        .upload-btn-wrapper {
+            position: relative;
+            overflow: hidden;
+            display: inline-block;
+            top: 24px;
+          }
+          
+          .upload-btn-wrapper input[type=file] {
+            font-size: 100px;
+            position: absolute;
+            left: 0;
+            top: 0;
+            opacity: 0;
+          }
+          .poll-btn{
+              padding: 5px!important;
+              .fa {
+                  margin: 0!important;
+                  font-size:2em;
+              }
+          }
+
     }
 }
 
