--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -63,6 +63,26 @@
     }
     .carousel-img{
         height: 50vh;
+        cursor: pointer;
+    }
+    .carousel{
+        .carousel-indicators{
+            bottom: -50px;
+            li{
+                width: 20px;
+                height: 20px;
+            }
+        }
+        .carousel-control-prev{
+            left: -10rem;
+        }
+        .carousel-control-next{
+            right: -10rem;
+        }
+        .carousel-control-prev-icon, .carousel-control-next-icon{
+            width: 5rem;
+            height: 5rem;
+        }
     }
     .no-events{
         color: #2e2e2e;
@@ -271,5 +291,15 @@
         margin-top: 50px !important;
         max-width: none !important;
 
+    }
+    .carousel-control-prev{
+        left: -2rem;
+    }
+    .carousel-control-next{
+        right: -2rem;
+    }
+    .carousel-control-prev-icon, .carousel-control-next-icon{
+        width: 2rem;
+        height: 2rem;
     }
 }
