--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -174,6 +174,9 @@
 }
 
 #participant{
+    .button-row{
+        margin-bottom: 30px;
+    }
     .container{
         max-width: 100%;
         height: 60vh;
